# RLCL

./: .gitignore  CMakeLists.txt  README.md  rlcl.py  rlcl.spec  rlcl_installer.iss
src/: main.c  main.cpp  systray.c
